methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:96: error: not found: value red
  colonnes(red);
           ^